<?xml version="1.0" encoding="utf-8"?>
<resources>
    //some texts do not depend on Language setting.
    <string name="app_name">To Do Things</string>
    <string name="high_priority" translatable="false"><font color='#DF5252'>!</font></string>
    <string name="high" translatable="false">!</string>
    //Texts in StartingScreen
    <string name="joinNow">JOIN NOW</string>
    <string name="alreadySignUp">Already have an account? Sign In!</string>

    //Texts in SignIn
    <string name="forgotPassword">Forgot Password?</string>
    <string name="signIn">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rememberMe">Remember Me</string>
    <string name="signInSuccessful">Sign In successfully!</string>
    <string name="requiredEmail">Email is required</string>
    <string name="requiredPassword">Password is required</string>
    <string name="wrongAccount">Invalid email or password.</string>

    //Texts in Forgot Password
    <string name="requestForgotEmail">Enter your sign in email</string>
    <string name="cancelBtn">Cancel</string>
    <string name="submitBtn">Submit</string>
    <string name="sendingMail">"Sending recovery email...."</string>
    <string name="doneSent">Finished sending.</string>
    <string name="errorOccur">Error Occur</string>
    <string name="cantSent">Can not send recovery email.</string>

    //Texts in SignUp
    <string name="signUp">SIGN UP</string>
    <string name="fullName"> Full name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="backToSignIn">BACK TO SIGN IN</string>
    <string name="welcomeNewUser">Welcome! Glad to see you here!</string>
    <string name="confirm_email">By clicking "Sign Up", you are sure that <font color='#ff0000'> your email is available</font>.</string>
    <string name="requiredFullName">Fullname is required</string>
    <string name="leastCharactersPassword">Password need at least 6 characters</string>
    <string name="emailFormatError">Please provide valid email</string>
    <string name="notMatchPassword">Password does not match</string>
    <string name="signUpSuccessful">Sign up successfully!</string>
    <string name="signUpFailed">Failed to sign up, please try again later!!!</string>
    <string name="emailExisted">This email is already existed</string>

    //texts in Home Screen
    <string name="hello">Hello, </string>
    <string name="today">TODAY</string>
    <string name="important">IMPORTANT</string>
    <string name="quick">QUICKTASK</string>
    <string name="project">Project</string>
    <string name="addBtn">ADD</string>
    <string name="title">Title</string>
    <string name="todayTask">Today Tasks</string>
    <string name="importantTask">Important Tasks</string>
    <string name="quickTask">Quick Tasks</string>

    //texts in Long Touch Option Dialog
    <string name="deleteBtn">DELETE</string>
    <string name="editBtn">EDIT</string>

    //texts in Edit Project Dialog
    <string name="editProject">EDIT PROJECT</string>
    <string name="confirmBtn">CONFIRM</string>

    //texts in Popup Menu
    <string name="myProfile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="logoutBtn"><font color="#ff0000">Log Out</font></string>

    //texts in Add Task Dialog
    <string name="onDate">On date:</string>
    <string name="onTime">At:</string>
    <string name="priority">Priority:</string>
    <string name="lowPriority">low</string>
    <string name="mediumPriority">medium</string>
    <string name="highPriority">high</string>
    <string name="description">Description</string>

    //texts in Search screen
    <string name="searchHint">What are you looking for?</string>

    //texts in Setting screen
    <string name="language">Language</string>
    <string name="languageSummary">Choose your language.</string>
    <string name="language_key" translatable="false">language_pref</string>
    <string name="systemSettings">System Settings</string>
    <string name="aboutAppTitle">About ToDoThings</string>
    <string name="aboutUs">About Us</string>
    <string name="aboutDev">Developers</string>
    <string name="devSummary">Below the ToDoThings logo, we have 3 characters stand for our developers.
        \n\t<font color='#FFF32929'>N: Doan Van Nghia - 519H0323</font>
        \n\t<font color='#FF2EC42B'>D: Mai Le Tien Dat - 519H0279</font>
        \n\t<font color='#074DDA'>H: Nguyen Le Ngoc Huy - 519H0295</font>
    </string>
    <string name="tdtSummary">
        ToDoThings first official version was released on December 20, 2021.
        \nToDoThings was created with the purpose of helping people manage the time of their day.
        \nWe would be happy to be a part of your success.
    </string>
    <string-array name="language_list">
        <item name="english">English</item>
        <item name="vietnamese">Tiếng Việt</item>
        <item name="korean">한국인</item>
    </string-array>
    <string-array name="language_list_alias">
        <item name="english">"en"</item>
        <item name="vietnamese">"vi"</item>
        <item name="korean">"ko"</item>
    </string-array>
    
    //text in changeUserNameDialog
    <string name="changeUserName">Change User Name</string>
    <string name="enterNewUserName">Enter your username here</string>
    <string name="changeUsernameSuccess">Username has changed.</string>

    //text in changePassword
    <string name="changePassword">Change Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="changePasswordSuccess">Password has changed.
    \nNext time, you have to sign in again.
    </string>

    <string name="touchStart">Touch anywhere to start...</string>
    <string name="applyBtn">Apply</string>
</resources>