<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/systemSettings">
        <ListPreference
            android:key="@string/language_key"
            android:title="@string/language"
            android:summary="@string/languageSummary"
            android:entries="@array/language_list"
            android:entryValues="@array/language_list_alias"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/aboutUs">
        <Preference
            android:title="@string/aboutAppTitle"
            android:summary="@string/tdtSummary"/>
        <Preference
            android:title="@string/aboutDev"
            android:summary="@string/devSummary"
            />

    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/tdt_logo_layout"
        ></PreferenceCategory>


</PreferenceScreen>