<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_oldPasswordReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oldPassword"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newPassword"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="140dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="366dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="59dp" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="366dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="181dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelBtn"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="274dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmBtn"
        tools:layout_editor_absoluteX="295dp"
        tools:layout_editor_absoluteY="275dp" />

</androidx.constraintlayout.widget.ConstraintLayout>