<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF8F8">


    <EditText
        android:id="@+id/txt_taskTitleInput"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/item_box"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textCapSentences"
        android:paddingLeft="3dp"
        android:textColor="@color/black"
        android:textColorHint="#706C6C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="334dp"
        android:layout_height="400dp"
        android:layout_marginTop="-30dp"
        android:background="@drawable/item_box"
        android:calendarTextColor="@color/black"
        android:datePickerMode="calendar"
        android:scaleY="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <RadioGroup
                android:id="@+id/rad_priority"
                android:layout_width="243dp"
                android:layout_height="32dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="35dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <RadioButton
                    android:id="@+id/low_priority_btn"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/lowPriority"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/medium_priority_btn"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mediumPriority"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/high_priority_btn"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/highPriority"
                    android:textColor="@color/black" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/priority"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timePicker" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/onDate"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_taskTitleInput" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_dialog_btn"
        android:layout_width="70dp"
        android:layout_height="29dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/cancelBtn"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_descriptionEdit"
        app:layout_constraintVertical_bias="0.951" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_dialog_btn"
        android:layout_width="70dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="Apply"
        android:textColor="@color/design_default_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toEndOf="@+id/cancel_dialog_btn"
        app:layout_constraintTop_toBottomOf="@+id/txt_descriptionEdit"
        app:layout_constraintVertical_bias="0.951" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="334dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/item_box"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_onTime" />

    <EditText
        android:id="@+id/txt_descriptionEdit"
        android:layout_width="342dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/item_box"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/description"
        android:inputType="textCapSentences"
        android:paddingLeft="3dp"
        android:paddingTop="2dp"
        android:paddingRight="3dp"
        android:paddingBottom="2dp"
        android:textColorHint="#837E7E"
        app:layout_constraintEnd_toEndOf="@+id/txt_taskTitleInput"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/txt_taskTitleInput"
        app:layout_constraintTop_toBottomOf="@+id/rad_priority" />

    <TextView
        android:id="@+id/txt_onTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="-30dp"
        android:text="@string/onTime"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker" />




</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>